--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,37 +3,36 @@
 </h4>
 <h5 class="ui center aligned medium icon header">
   <i class="circular red comments icon"></i>
-  Log in to continue
+  Create an account
 </h5>
 
 <div class="ui placeholder segment">
-  <div class="ui two column very relaxed stackable grid">
+  <div class="ui one column very relaxed stackable grid">
     <div class="column">
-      <%= form_for(:session, html: {class: "ui form", role: "form"}, url: login_path) do |f| %>
+      <%= form_for(:user, html: {class: "ui form", role: "form"}, url: signup_path) do |f| %>
         <div class="field">
-          <%= f.label :username, "Username" %>
+          <%= f.label :username, "Enter username" %>
           <div class="ui left icon input">
             <%= f.text_field :username, placeholder: "Username" %>
             <i class="user icon"></i>
           </div>
         </div>
         <div class="field">
-          <%= f.label :password, "Password" %>
+          <%= f.label :password, "Enter password" %>
           <div class="ui left icon input">
             <%= f.password_field :password, placeholder: "Password" %>
             <i class="lock icon"></i>
           </div>
         </div>
-        <%= f.button "Login", class: "ui orange submit button" %>
+        <div class="field">
+          <%= f.label :email, "Enter an email" %>
+          <div class="ui left icon input">
+            <%= f.text_field :email, placeholder: "Email" %>
+            <i class="user icon"></i>
+          </div>
+        </div>
+        <%= f.submit "Create account", class: "ui orange submit button" %>
       <% end %>
     </div>
-    <div class="middle aligned column">
-      <div class="ui big orange button">
-        <%= link_to "Sign up", signup_path, class: "ui big orange button" %>
-      </div>
-    </div>
-  </div>
-  <div class="ui vertical divider">
-    Or
   </div>
 </div>
